Added Hibernate support to the project